--- a/stylenew.css
+++ b/stylenew.css
@@ -787,7 +787,7 @@ footer {
     }
 
     #our-firm {
-        width: 100%;
+        width: 90%;
         height: auto;
     }
 
@@ -803,7 +803,7 @@ footer {
     }
 
     #about-text {
-        font-size: 2.4vw;
+        font-size: 2.2vw;
         width: 90%;
         margin-top: 2vh;
         line-height: 2vh;
@@ -811,6 +811,7 @@ footer {
 
     #senior {
         margin-top: 2vh;
+        width: 100%;
     }
 
     #Stephen {
@@ -1030,7 +1031,7 @@ footer {
     }
 
     .memb-img {
-        width: 15vw;
+        width: 13vmin;
         height: 7vh;
         border-radius: 30vw;
     }
@@ -1094,7 +1095,7 @@ footer {
     }
 
     .foot-icon {
-        width: 6vw;
+        width: 6vmin;
         height: 3vh;
     }
 }
