--- a/stylenew.css
+++ b/stylenew.css
@@ -128,7 +128,6 @@ section {
 }
 
 #our-firm {
-    width: 100vw;
     height: 70vh;
     flex-shrink: 0;
     display: flex;
@@ -787,31 +786,34 @@ footer {
     }
 
     #our-firm {
-        width: 90%;
         height: auto;
     }
 
     #about-firm {
         width: 90%;
-        margin-left: 15vw;
-        margin-top: 10vh;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 
     #about-name {
-        width: 30%;
-        font-size: 5vw;
+        width: 20%;
+        font-size: 4vw;
+        display: flex;
     }
 
     #about-text {
         font-size: 2.2vw;
-        width: 90%;
+        display: flex;
         margin-top: 2vh;
         line-height: 2vh;
     }
 
     #senior {
         margin-top: 2vh;
-        width: 90%;
+        width: 80%;
     }
 
     #Stephen {
